packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/star.ttrp
container c(in t, out result) target erp_pg """sql
SELECT * FROM t
"""
