packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-009.ttrp
// expect: TTRP-SQL-009
container c target erp_pg """sql
SELECT id FROM t; SELECT id FROM u
"""
